--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "io.github.karino2.tegashiki"
+        applicationId "io.github.karino2.tegashiki.app"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
